--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ header {
   .clipped-photo {
     width: 400px;
     height: 500px;
-    background-image: url("/iamge/haisam2.png"); /* Replace with your image path */
+    background-image: url("iamge/haisam2.png"); /* Replace with your image path */
     background-size: cover;
     background-position: center;
     clip-path: polygon(25% 0%, 100% 0%, 100% 75%, 75% 100%, 0% 100%, 0% 25%);
