--- a/style.css
+++ b/style.css
@@ -51,7 +51,15 @@ body {
   opacity: 1;
   transform: scale(1);
 }
-
+marquee{
+  background-color: var(--dark-gray-color);
+  color: var(--bg-lighting-yellow);
+  font-size: 16px;
+  padding: 8px 0;
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+}
 header {
   padding: 110px 0px;
   text-align: left;
@@ -89,7 +97,7 @@ header {
   .clipped-photo {
     width: 400px;
     height: 500px;
-    background-image: url("iamge/haisam2.png"); /* Replace with your image path */
+    background-image: url("/iamge/haisam2.png"); /* Replace with your image path */
     background-size: cover;
     background-position: center;
     clip-path: polygon(25% 0%, 100% 0%, 100% 75%, 75% 100%, 0% 100%, 0% 25%);
