--- a/style.css
+++ b/style.css
@@ -26,6 +26,20 @@ body {
 .d-flex {
   display: flex;
 }
+.d-flex-col {
+  display: flex;
+  flex-direction: column;
+}
+.d-flex-row {
+  display: flex;
+  flex-direction: row;
+}
+.d-none {
+  display: none;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
 .j-cn {
   justify-content: center;
 }
@@ -35,8 +49,14 @@ body {
 .j-ev {
   justify-content: space-evenly;
 }
+.j-start {
+  justify-items: start;
+}
 .al-cn {
   align-items: center;
+}
+.al-end {
+  align-items: flex-end;
 }
 .tl-cn {
   text-align: center;
@@ -234,6 +254,64 @@ header {
     border-radius: 100%;
   }
 }
+.Contributions{
+  background-color: rgb(20, 19, 33);
+  padding: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  .git-profile-info{
+    line-height: 0.5;
+    p{
+      font-size: 14px;
+      color: var(--bg-lighting-yellow);
+      text-transform: capitalize;
+      font-weight: 300;
+      margin-top: 10px;
+    }
+  }
+  h1 {
+    font-size: 4vw;
+    font-weight: 900;
+    color: var(--bg-lighting-yellow);
+    text-transform: capitalize;
+    text-align: center;
+    margin-bottom: 20px;
+    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5));
+  }
+  @media screen and (max-width: 900px){
+    h1 {
+      font-size: 2.5rem;
+    }
+  }
+  .git-Bio{
+    font-size: 16px;
+    color: var(--bg-lighting-yellow);
+    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5));
+    text-transform: capitalize;
+    font-weight: 300;
+    margin-top: 10px;
+    text-align: center;
+    padding: 10px 0;
+  }
+  .projects {
+    h2{
+      font-size: 2rem;
+      font-weight: 900;
+      color: var(--bg-lighting-yellow);
+      text-transform: uppercase;
+      margin-bottom: 10px;
+    }
+    ul{
+      margin: 0;
+      li {
+      color: yellowgreen;
+      a{
+        color: var(--bg-lighting-yellow);
+      }
+    }
+    }
+  }
+}
 .footer {
   margin: 50px 0;
 }
@@ -323,6 +401,7 @@ header {
     padding: 0px;
     h1{
       font-size: 2.5rem;
+      margin-top: 7vh;
     }
     .clipped-photo{
       margin: 20px 20px;
