--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
   --gray-color: #828181;
   --dark-gray-color: #313433;
 }
+.google_translate_element{
+  position: fixed;
+  top: 45px!important;
+  right: 10px;
+  z-index: 4;
+  background-color: thistle;
+  border-radius: 3px;
+  padding: 8px;
+}
 html,
 body {
   margin: 0;
@@ -98,20 +107,37 @@ header {
     font-weight: 300;
     margin-top: 10px;
   }
-  button {
-    background-color: transparent;
-    color: var(--dark-gray-color);
+  .hero_button_fv{
+    background-color: #1dbf73;
+    color: white;
+    border: none;
     padding: 10px 20px;
-    border: 1px solid var(--dark-gray-color);
-    border-radius: 1px;
-    text-transform: uppercase;
+    border-radius: 3px;
+    text-transform: capitalize;
     cursor: pointer;
     font-size: 1rem;
+    font-weight: 700;
+    transition: background-color 0.3s ease;
+    &:hover {
+      background-color: #17a564;
+    }
+  }
+  .view_cv {
+    background-color: yellow;
+    color: var(--dark-gray-color);
+    padding: 10px 30px;
+    border-radius: 3px;
+    border: none;
+    text-transform: capitalize;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 700;
     transition: background-color 0.3s ease;
 
     &:hover {
-      background-color: var(--dark-gray-color);
-      color: var(--bg-lighting-yellow);
+      background-color: rgba(255, 255, 0, 0.891);
+      color: black;
+      text-decoration: underline;
     }
   }
   .clipped-photo {
@@ -222,7 +248,7 @@ header {
   div {
     width: 100%;
     height: 300px;
-    background-color: var(--dark-gray-color);
+    background-color: rgb(20, 19, 33);
     border-radius: 10px;
     border: 1px solid var(--gray-color);
     padding: 20px;
@@ -230,8 +256,14 @@ header {
     transition: transform 0.3s ease;
 
     &:hover {
+      background-color: rgb(34, 32, 56);
       transform: translateY(-10px);
       transition: transform 0.3s ease;
+      img{
+        scale: 1.3;
+        rotate: -10deg;
+        transition: scale 0.3s ease, rotate 0.3s ease;
+      }
     }
     p {
       font-size: 16px;
@@ -249,13 +281,24 @@ header {
     }
   }
   img {
+    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5));
     width: 4rem;
     object-fit: cover;
     border-radius: 100%;
+    transition: scale 0.3s ease, rotate 0.3s ease;
   }
 }
 .Contributions{
   background-color: rgb(20, 19, 33);
+  /* background-image: url("iamge/projects-beta-banner-dark-fc370172a740.png");
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-attachment: center;
+  background-size: 70% auto; */
+  /* background: #485563;  fallback for old browsers */
+background: -webkit-linear-gradient(to right, #141321, #29323c);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #141321, #29323c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   padding: 50px;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -312,6 +355,8 @@ header {
     }
   }
 }
+
+
 .footer {
   margin: 50px 0;
 }
