--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   background-color: var(--bg-lighting-yellow);
   color: var(--dark-gray-color);
 }
+
 .main {
   width: 80%;
   margin: 0 auto;
@@ -290,39 +291,34 @@ header {
 }
 
 /* gallery-carousel */
-
 .gallery-carousel {
   display: flex;
-  background-color: var(--gray-color);
-  gap: 15px;
+  gap: 5px;
   overflow-x: auto;
-  scroll-behavior: smooth;
-  padding: 10px 0;
-  scrollbar-width: none;
-}
-
-.gallery-carousel::-webkit-scrollbar {
-  display: none;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+  
 }
 
 .gallery-item {
-  min-width: 250px;
-  height: 180px;
-  flex-shrink: 0;
-  overflow: hidden;
-  border-radius: 10px;
+  min-width: 80%;
+  scroll-snap-align: center;
 }
 
+@media (min-width: 601px) {
+  .gallery-item {
+    min-width: 250px;
+  }
+}
 .gallery-item img {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
+  border: 1px solid var(--gray-color);
   object-fit: cover;
   cursor: pointer;
   transition: .3s ease;
-}
-
-.gallery-item img:hover {
-  transform: scale(1.05);
+  /* filter: grayscale(); */
 }
 
 /* Fullscreen popup viewer */
